--- a/web/CSS/status.css
+++ b/web/CSS/status.css
@@ -376,3 +376,46 @@
     border: 5px solid #bbb;
 }
 /*===========================*/
+.statusContainAllQR{
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    background-color: gray;
+    flex-direction: column;
+}
+
+.statusContainAllQR .scanCodeSubContainVideo{
+    margin: 20px auto;
+}
+
+.statusContainAllQR .scanCodeSubContainVideo video{
+    border: 2px solid black; 
+    width: 250px;
+    height: 250px;
+    border-radius: 20px;
+}
+
+.statusContainAllQR .scanCodeSubContainCanvas {
+    margin: 20px auto;
+    width: 250px;
+    height: 250px;;
+    border: 2px solid brown;
+    border-radius: 20px;
+}
+
+.statusContainAllQR .scanCodeSubContainCanvas canvas{
+    width: 250px;
+    height: 250px;
+    border: 2px solid brown;
+    border-radius: 20px;  
+}
+
+.statusContainAllQR .buttonScanCodeSubContain{
+    border-radius: 10px;
+    border: 3px solid #8B4000;
+    width: 200px; 
+    height: 40px;
+    background-color: white;
+    font-weight: bold;
+}
