--- a/web/CSS/posOfficeStyle.css
+++ b/web/CSS/posOfficeStyle.css
@@ -1,3 +1,4 @@
+
 .searchPosHeader{
     background-color: rgb(121,56,2);
     width: 30%;
@@ -162,9 +163,17 @@
 }
 
 .listPostOfficeTextArea{
+    position: absolute;
     width: 80%;
-    height: 500px;
-    margin: 20px 0;
-    background-color:whitesmoke;
+    height: 450px;
+    top: 0;left: 0;bottom: 0;right: 0;
+    margin: 20px auto;
+    background-color:white;
     border-radius: 5px;
+}
+
+.listPostOfficeTextAreaContain{
+    position: relative;
+    width: 100%;
+    height: 500px;
 }
