--- a/web/CSS/status.css
+++ b/web/CSS/status.css
@@ -1,9 +1,10 @@
 .statusContainAll{
     margin: 0 auto;
+    margin-bottom: 50px;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    background-color: gray;
+    background: linear-gradient(0.75turn,rgb(233, 180, 69),rgb(249, 100, 0));
 }
 
 .searchItemStatus{
@@ -48,7 +49,7 @@
     position: relative;
     /*width: 60%;*/
     background-color: rgb(139,64,0);
-    margin: 25px auto;  
+    margin: 0 auto;  
     border-radius: 5px;
     overflow: auto;
 }
@@ -381,7 +382,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    background-color: gray;
+
     flex-direction: column;
 }
 
